welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var t : Int= nums.length ;
  var p: Int = 0 ;
  for (i <- 0 to t-1){
    if ( nums(i) == 6){
      if ( i+1<= t-1){
        if (nums(i+1)==6){
          p=p+1
        }
        
        }
      }
  }
  return false
}